email validations and other formatting changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -92,3 +92,10 @@ nav ul li a {
 nav ul ul ul {
 	position: absolute; left: 100%; top:0;
 }
+
+@media (max-width: 979px) {
+	.navbar .nav {
+	  display: block !important;
+	}
+
+}
