--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -274,7 +274,7 @@
 			<h3>The TLC Tooth Fairy</h3>
 			<div class="row-fluid" style="position:absolute; z-index:1;">
 				<div class="span4">
-					<%= image_tag 'toothfairy.jpg' %>
+					<%= image_tag 'toothfairy.jpg', :class => "toothfairy" %>
 				</div>
 			</div>
 			<table style="position:relative; z-index:99;">
