--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@ our family of staff and patients.</div>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <div class="nav-collapse">
+        <div class="nav-collapse" style="height: auto !important;">
           <ul class="nav">
             <li><%= link_to "Home", home_path %></li>
             <li><%= link_to "Staff", staff_path %></li>
