added testimonials and fixed bonding banner

--- a/app/views/static_pages/advancedtechnology.html.erb
+++ b/app/views/static_pages/advancedtechnology.html.erb
@@ -88,7 +88,7 @@
 				The Polus Whitening Accelerator by Byeond Dental is the ultimate in tooth whitening technology. Its distinctive LightBridge system combines halogen and LED light sources for superior whitening power while advanced filtration ensures patient safety by removing all harmful heat and ultraviolet output. Three flexible settings tailor the treatment to a patient’s tooth sensitivity level and a detachable LED curing light enables spot whitening of a single tooth.<br>
 			</p>
 			<p>
-				A Polus Whitening Treatment consits of three safe and successive 10 minute sessions that lighten teeth by 3 to 8 shades. By comparision, drugstore whitening products require weeks of risk laden treatment to lighten teeth by 1 shade. So quick and transformative are the powers of our Polus Whitening Accelrator that we liken it to Cinderellla’s Fiary Godmother.
+				A Polus Whitening Treatment consits of three safe and successive 10 minute sessions that lighten teeth by 3 to 8 shades. By comparision, drugstore whitening products require weeks of risk laden treatment to lighten teeth by 1 shade. So quick and transformative are the powers of our Polus Whitening Accelrator that we liken it to Cinderellla’s Fairy Godmother.
 			</p>		
 		</div>
 	</div>
