--- a/app/views/static_pages/testimonials.html.erb
+++ b/app/views/static_pages/testimonials.html.erb
@@ -4,5 +4,149 @@
 		<div class="span12">
 			<u>Testimonials</u>
 		</div>
+	</div>			
+</div>
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="content-container">
+			<div class="row-fluid">
+				<div class="span12">			
+					<p>
+						Several years ago the one thing that caught my eye about Dr. Rothenberg's practice was its saying "We Cater to Cowards."  They were talking to me.  I'd been petrified of gong to the dentist ever since I was a kid and avoided seeing one like the plague.  
+					</p>
+					<p>
+						However, there came a time,when I just had to see one and they weren't kidding when they say they cater to cowards.  I mean, I've never been treated more gently and there was simply no pain.  No kidding, no pain !  You're coddled from the time you enter the door and the whole experience is pain-free and relaxing.
+					</p>
+					<p>
+						So if you're a charter member of the Cowards Club and need a dentist, Dr. R and the TLC Dental Group are the way to go.
+					</p>
+					<p>
+						Peyton B.	
+					</p>
+				</div>
+			</div>	
+		</div>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="content-container">
+			<div class="row-fluid">
+				<div class="span12">			
+					<p>
+						After moving to Syracuse from Chicago I wanted to have some dental work done that I had put off for a number of years.  I needed a bridge, a couple of crowns, and a dentist.  And I wanted the best of all possible worlds, a very good dentist with very reasonable rates.  When I checked around I either found the rates eye popping or the dental practices eyesores.
+					</p>
+					<p>
+						Then I found Dr.Rothenberg and the TLC Dental Group who say they "take the bite out of seeing the dentist" and they're right.  My dental work was first rate at a wonderfully reasonable rate.
+					</p>
+					<p>
+						Halley M.
+					</p>
+				</div>
+			</div>	
+		</div>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="content-container">
+			<div class="row-fluid">
+				<div class="span12">			
+					<p>
+						By nature I'm a prudent man or, as my wife often says, pig headed.  I attribute my skepticism to my mother who hails from Missouri where skepticism is a birthright.  And I am particularly prudent when it comes to trusting people with my children, my car, and my teeth all of which, at times, have been causes of concern.
+					</p>
+					<p>
+						And so it was when I trusted my teeth to Dr. Rothenberg some twenty years ago.  A back tooth had been hurting for weeks and I just wanted it yanked.  Dr. Rothenberg examined it and told me a root canal and a crown could save the tooth and save me problems that often follow lost teeth.
+					</p>
+					<p>
+						I thought he might be trying to pad my bill but I decided to take his advice and see what happens.  Well, I've still got that tooth and saved good money that would have gone for an implant or false teeth.  Over the years he's taken care of my kid's teeth, my wife's teeth, and those of my in-laws.  The only thing he hasn't taken care of is my car.
+					</p>
+					<p>
+						Dr. Rothenberg and the TLC Dental Group have earned my trust and that's coming from a man with a Missouri Mother.	
+					</p>
+					<p>
+						Robert J.
+					</p>
+				</div>
+			</div>	
+		</div>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="content-container">
+			<div class="row-fluid">
+				<div class="span12">			
+					<p>
+						A few words about Dr. Rothenberg and the TLC Dental Group.   I don't have time to write some long essay especially when it's not necessary.  Dr. Rothenberg's a good dentist, a very good dentist.  He surrounds himself with a good staff, a very good staff.  
+					</p>
+					<p>
+						It's like going to a steak house.  The waiter can gush on forever about the succulence of the steaks but one taste tells it all.  Dr. Rothenberg's been A-1 with me for many years.  Need I say more.
+					</p>
+					<p>
+						Mason E.
+					</p>
+				</div>
+			</div>	
+		</div>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="content-container">
+			<div class="row-fluid">
+				<div class="span12">			
+					<p>
+						When I think about Dr. Rothenberg, I think about the gift. 
+					</p>
+					<p>
+						All through elementary school, high school, and college I was never the best looking girl.  I wasn't unattractive but nothing ever stood out and there were the little imperfections.  My hair wasn't full and flowing like the commercials.  My nose was a little pointed.  And my teeth summed it up.  One of my front teeth was a bit askew, a lower tooth had a rough edge, an old crown on one tooth didn't seem to match the others, and although clean, my teeth sure didn't gleam.
+					</p>
+					<p>
+						That's when I got the gift from my husband for our 5th wedding anniversary.  He had long been a patient of Dr. Rothenberg and arranged for a complete cosmetic makeover.  Away went the askew tooth, the rough edge, the old crown and my teeth not only gleamed, they glowed.
+					</p>
+					<p>
+						The difference really has been amazing.  My friends, fellow workers, people I first meet, everyone warms to my smile.  I still don't have the full, flowing hair and a perfect nose but I sure have a killer smile thanks to Dr. R. and the gift. 
+					</p>
+					<p>
+						Victoria L.
+					</p>
+				</div>
+			</div>	
+		</div>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="content-container">
+			<div class="row-fluid">
+				<div class="span12">			
+					<p>
+						Normally, if I were writing about a restaurant I'd write about the food.  If I were writing about a shoe store I'd write about the shoes.  And if I were writing about a dentist I'd write about his / her dental skills.  With Dr. Rothenberg and his staff, great skills are a given.  
+					</p>
+					<p>
+						What I want to write about is that he's a Green Dentist.  I'm a 21 year old college student who spent a semester in Beijing, China.  I'd never been to China and was very excited about learning the language and meeting the people.  The semester was all and more than I expected for China is a land rich in history and culture not to mention our country's principal creditor. 
+					</p>
+					<p>
+						There is a remarkable interdependence between our countries.  More than 25% of SU students come from China and Asian countries and American colleges are peppering China with branches.  Our economies are entwined.  My ipad is made in China.  The coal fueling the ipad  factory is from the U.S. 
+					</p>
+					<p>
+						But we and the world are entwined in other ways.  The Chinese plant burning American coal and thousands of others across China have no scrubbers and spew immense pollution.  There were Beijing days when the pollution was so thick I could scarcely see across the street.
+					</p>
+					<p>
+						What world will I leave my children?  Will they breathe befouled air?  Will Sandy and Katrina be commonplace?    Will endless droughts wilt their crops?    Will icecaps, corals, and hundred of creatures disappear?
+					</p>
+					<p>
+						We all must play our part to prevent this and Dr. Rothenberg and the TLC Dental Group are leaders in Green Dentistry as you can see from their office with its emphasis on digital records, recycling, and its 6-R program.
+					</p>	
+					<p>
+						Dr. Rothenberg is not only looking out for me today.  He's also looking out for the children of my tomorrows.
+					</p>
+					<p>
+						Leah P.
+					</p>														
+				</div>
+			</div>	
+		</div>
 	</div>
 </div>
