--- a/app/views/static_pages/flouridetreatment.html.erb
+++ b/app/views/static_pages/flouridetreatment.html.erb
@@ -56,11 +56,17 @@
 				If you or any member of your family is subject to these risk factors, you should promptly contact TLC Dental for a consultation to determine whether fluoride supplements and/or treatments would be needed to provide for your dental health.<br>
 			</p>
 			<p>
-				<b>TLC Fluoride Treatment</b>
+				<b>TLC Fluoride Treatment</b><br>
+				Our professional fluoride treatments are short and simple procedures that contain prescription strength fluoride not available in supermarket toothpaste and mouthwashes.  First, we carefully examine your teeth to personalize your fluoride treatment.and select a type of fluoride best suited for your dental condition.   We then determine your most appropriate form of treatment either as a gel, foam, varnish or rinse applied with a swab, brush, or tray.  The entire process takes only minutes after which we advise you to refrain from eating, drinking, or rinsing for thirty minutes.
 			</p>
 			<p>
-				<b>Fluoride Durability</b>
+				<b>Fluoride Durability</b><br>
+				The durability of your TLC fluoride treatment depends on your dental condition.  If you are at a moderate or high risk of developing caries, we may recommend additional treatments every three, six, or twelve months as well as prescription fluoride toothpastes, gels, or rinses to assure your dental health.
 			</p>
+			<p>
+				<b>Gentle Comfort</b><br>
+				Throughout your fluoride treatment you will enjoy the comfort of our signature "Gentle Dentistry."
+			</p>			
 			<p>
 				<b>More Information</b></br>
 				For definitions related to fluoride consult Dr. Rothenberg's Dental Dictionary.  And to schedule a TLC fluoride treatment consultation, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
