flossy border fixed

--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -402,7 +402,7 @@
 </div>
 <div class="row-fluid">
 	<div class="span10 offset1">
-		<div class="content-container">
+		<div class="content-container" style="display:block;">
 			<h3>Flossy</h3>
 			<table>
 
