--- a/app/views/notifications_mailer/new_message.text.erb
+++ b/app/views/notifications_mailer/new_message.text.erb
@@ -1,8 +1,8 @@
-<b>Name:</b> <%= @message.name %><br><br>
-<b>Current Patient?</b> <%= @message.currentpatient %><br><br>
-<b>Email Address:</b> <%= @message.email %><br><br>
-<b>Phone Number:</b> <%= @message.phone %><br><br>
-<b>Best time to call?</b> <%= @message.calltime %><br><br>
-<b>Date:</b> <%= @message.date %><br><br>
-<b>Desired Apointment Time:</b> <%= @message.apttime %><br><br>
-<b>Treatment:</b> <%= @message.treatment %><br><br>
+Name: <%= @message.name %>
+Current Patient? <%= @message.currentpatient %>
+Email Address: <%= @message.email %>
+Phone Number: <%= @message.phone %>
+Best time to call? <%= @message.calltime %>
+Date: <%= @message.date %>
+Desired Apointment Time: <%= @message.apttime %>
+Treatment: <%= @message.treatment %>
