--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag :defaults, "rails.validations" %>
   <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
@@ -151,7 +152,7 @@ our family of staff and patients.</div>
 			<h6 style="position:relative; top: 8px;">Join Us</h6>
 			<%= image_tag('facebook.jpg') %>
 			<%= link_to image_tag('twitter.jpg'), 'http://www.twitter.com', :title => 'TLC Dental Group Twitter Link' %>
-			<a href="http://www.google.com"><h6 style="display:inline-block; position:relative; top:7px;">More</h6></a>		
+			<a href="#"><h6 style="display:inline-block; position:relative; top:7px;">More</h6></a>		
 		</div>
 	</div>
 </div>
