fixed green dental banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -160,7 +160,7 @@ our family of staff and patients.</div>
 		<div class="row-fluid">
 			<div class="span10 offset1">
 				<p>
-					Rothenberg DDS/TLC Dental Group, Route 92, 7197 Highbridge Road, Fayetteville, NY 13066, 315-637-7684.  TLC Dental Group is a full service family dental practice serving Greater Syracuse.  We thank our artist Dan Blaushild and our website creator Eric Filkins.  
+					Rothenberg DDS/TLC Dental Group, Route 92, 7197 Highbridge Road, Fayetteville, NY 13066, 315-637-7684.  TLC Dental Group is a full service family dental practice serving Greater Syracuse.  We thank our artist Dan Blaushild and our website creator Eric Filkins. Copyright 2013 TLC Dental Group, All rights reserved 
 				</p>
 			</div>
 		</div>
