--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -149,8 +149,8 @@ our family of staff and patients.</div>
 	<div class="span2 offset6">
 		<div class="socialmedia">
 			<h6 style="position:relative; top: 8px;">Join Us</h6>
-			<%= image_tag('facebook.jpg') %>
-			<%= link_to image_tag('twitter.jpg'), 'http://www.twitter.com', :title => 'TLC Dental Group Twitter Link' %>
+			<%= link_to image_tag('facebook.jpg'), 'https://www.facebook.com/pages/TLC-Dental-Group/703498763013164', :target => "_blank" %>
+			<%= image_tag('twitter.jpg') %>
 			<a href="#"><h6 style="display:inline-block; position:relative; top:7px;">More</h6></a>		
 		</div>
 	</div>
