changed date placeholder

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -98,7 +98,7 @@
 				<%= form.radio_button(:calltime, "Evening") %>
 				<%= form.label(:calltime, "Evening") %><br><hr>
 				<strong>Date of desired appointment?</strong><br>
-				<%= form.text_field 'date', :placeholder => 'Date of desired appointment?' %><br><hr>
+				<%= form.text_field 'date', :placeholder => 'dd/mm/yy' %><br><hr>
 				<strong>Preferred Time?</strong><br>
 				<%= form.radio_button(:apttime, "Morning") %>
 				<%= form.label(:apttime, "Morning") %>	
