--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -6,7 +6,6 @@
 		</div>
 	</div>			
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -20,23 +19,31 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>New Patient Forms</h3>
+			<u><h3>We Cater to Cowards</h3></u>
 			<p>
-				Should you prefer to leisurely complete the Health History and New Patient forms before arriving at TLC Dental for your first visit, we have made them available for you in pdf format.  To view and print these forms, your computer must have the Adobe Acrobat Reader program.  If your computer lacks this program, you may easily and quickly download it by clicking below.
-			</p>				
-			<ul>
-				<li><%= link_to "Click to download Adobe Acrobat Reader", "http://get.adobe.com/reader/" %></li>
-				<li>Health History Form</li>
-				<li>New Patient Form </li>
-			</ul>
+				For more than a quarter of a century our calling card has been “We cater to cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry.  Today, TLC draws on an array of resources to allay your concerns including our staff, ambiance, amenities, anesthetics, sedation, and our unwavering commitment to your care and comfort.<br>
+			</p>			
+			<%= image_tag 'cowardlylion.jpg', :class => "center" %>
 		</div>
 	</div>
 </div>
-
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="contact-container">
+			<u><h3>We Take the Bite Out of Seeing the Dentist</h3></u>
+			<p>
+				Dr. Rothenberg believes that: "excellent dental care should not be reserved for the privileged few."  Accordingly, TLC Dental has long been recognized not only for the excellence of its dental care but also for the affordability of its care.<br>
+			</p>
+			<p>
+				We take pride in our "Dream Smiles" and equal pride in being a truly "affordable dentist."   In short, we will preserve your teeth and your wallet.<br>
+			</p>		
+			<%= image_tag 'sharkballandchain.png', :class => "center" %>				
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -83,7 +90,21 @@
 		</div>
 	</div>
 </div>
-
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="contact-container">
+			<h3>New Patient Forms</h3>
+			<p>
+				Should you prefer to leisurely complete the Health History and New Patient forms before arriving at TLC Dental for your first visit, we have made them available for you in pdf format.  To view and print these forms, your computer must have the Adobe Acrobat Reader program.  If your computer lacks this program, you may easily and quickly download it by clicking below.
+			</p>				
+			<ul>
+				<li><%= link_to "Click to download Adobe Acrobat Reader", "http://get.adobe.com/reader/" %></li>
+				<li>Health History Form</li>
+				<li>New Patient Form </li>
+			</ul>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -95,7 +116,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
