removed underline from headlines

--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<u><h3>Introduction</h3></u>
+			<h3>Introduction</h3>
 			<p>
 				It is a pleasure to welcome you to our TLC family of patients and a privilege to provide for your dental health and  "Dream Smile."  In your first and following visits, we will always welcome you warmly, offer you the most modern dental technology, afford you our signature "Gentle Dentistry," and draw on our years of training and experience to assure your dental well being.  In short, we will care for you as one of our family.<br>
 			</p>
@@ -22,7 +22,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<u><h3>We Cater to Cowards</h3></u>
+			<h3>We Cater to Cowards</h3>
 			<p>
 				For more than a quarter of a century our calling card has been “We cater to cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry.  Today, TLC draws on an array of resources to allay your concerns including our staff, ambiance, amenities, anesthetics, sedation, and our unwavering commitment to your care and comfort.<br>
 			</p>			
@@ -33,7 +33,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<u><h3>We Take the Bite Out of Seeing the Dentist</h3></u>
+			<h3>We Take the Bite Out of Seeing the Dentist</h3>
 			<p>
 				Dr. Rothenberg believes that: "excellent dental care should not be reserved for the privileged few."  Accordingly, TLC Dental has long been recognized not only for the excellence of its dental care but also for the affordability of its care.<br>
 			</p>
