--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -23,7 +23,7 @@
 	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>We Cater to Cowards</h3>
-			<%= image_tag 'cowardlylion.jpg', :class => "center" %>
+			<%= image_tag 'cowardlylion.jpg', :class => "center" %><br>
 			<p>
 				For more than a quarter of a century our calling card has been “We cater to cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry.  Today, TLC draws on an array of resources to allay your concerns including our staff, ambiance, amenities, anesthetics, sedation, and our unwavering commitment to your care and comfort.<br>
 			</p>			
