added testimonial images

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -422,6 +422,10 @@ table.gadget {
     }
 }
 
+.testimonial {
+  height: 180px;
+  width: auto;
+}
 
 @media (max-width: 1199px) {
   #left-welcome {
