--- a/app/views/static_pages/testimonials.html.erb
+++ b/app/views/static_pages/testimonials.html.erb
@@ -17,6 +17,7 @@
 					<p>
 						However, there came a time,when I just had to see one and they weren't kidding when they say they cater to cowards.  I mean, I've never been treated more gently and there was simply no pain.  No kidding, no pain !  You're coddled from the time you enter the door and the whole experience is pain-free and relaxing.
 					</p>
+					<%= image_tag "paperandfeather.jpg", :class => "float-right testimonial" %>
 					<p>
 						So if you're a charter member of the Cowards Club and need a dentist, Dr. R and the TLC Dental Group are the way to go.
 					</p>
@@ -39,6 +40,7 @@
 					<p>
 						Then I found Dr.Rothenberg and the TLC Dental Group who say they "take the bite out of seeing the dentist" and they're right.  My dental work was first rate at a wonderfully reasonable rate.
 					</p>
+					<%= image_tag "quill.png", :class => "float-right testimonial" %>
 					<p>
 						Halley M.
 					</p>
@@ -64,6 +66,7 @@
 					<p>
 						Dr. Rothenberg and the TLC Dental Group have earned my trust and that's coming from a man with a Missouri Mother.	
 					</p>
+					<%= image_tag "scroll.jpg", :class => "float-right testimonial" %>
 					<p>
 						Robert J.
 					</p>
