added correct scroll to all testimonial boxes

--- a/app/views/static_pages/testimonials.html.erb
+++ b/app/views/static_pages/testimonials.html.erb
@@ -33,14 +33,14 @@
 	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span12">			
+				<div class="span12">	
+					<%= image_tag "paperandfeather.jpg", :class => "float-right testimonial" %>			
 					<p>
 						After moving to Syracuse from Chicago I wanted to have some dental work done that I had put off for a number of years.  I needed a bridge, a couple of crowns, and a dentist.  And I wanted the best of all possible worlds, a very good dentist with very reasonable rates.  When I checked around I either found the rates eye popping or the dental practices eyesores.
 					</p>
 					<p>
 						Then I found Dr.Rothenberg and the TLC Dental Group who say they "take the bite out of seeing the dentist" and they're right.  My dental work was first rate at a wonderfully reasonable rate.
 					</p>
-					<%= image_tag "quill.png", :class => "float-right testimonial" %>
 					<p>
 						Halley M.
 					</p>
@@ -53,7 +53,8 @@
 	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span12">			
+				<div class="span12">	
+					<%= image_tag "paperandfeather.jpg", :class => "float-right testimonial" %>		
 					<p>
 						By nature I'm a prudent man or, as my wife often says, pig headed.  I attribute my skepticism to my mother who hails from Missouri where skepticism is a birthright.  And I am particularly prudent when it comes to trusting people with my children, my car, and my teeth all of which, at times, have been causes of concern.
 					</p>
@@ -66,7 +67,6 @@
 					<p>
 						Dr. Rothenberg and the TLC Dental Group have earned my trust and that's coming from a man with a Missouri Mother.	
 					</p>
-					<%= image_tag "scroll.jpg", :class => "float-right testimonial" %>
 					<p>
 						Robert J.
 					</p>
@@ -79,7 +79,8 @@
 	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span12">			
+				<div class="span12">	
+					<%= image_tag "paperandfeather.jpg", :class => "float-right testimonial" %>			
 					<p>
 						A few words about Dr. Rothenberg and the TLC Dental Group.   I don't have time to write some long essay especially when it's not necessary.  Dr. Rothenberg's a good dentist, a very good dentist.  He surrounds himself with a good staff, a very good staff.  
 					</p>
@@ -98,7 +99,8 @@
 	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span12">			
+				<div class="span12">
+					<%= image_tag "paperandfeather.jpg", :class => "float-right testimonial" %>				
 					<p>
 						When I think about Dr. Rothenberg, I think about the gift. 
 					</p>
@@ -123,7 +125,8 @@
 	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span12">			
+				<div class="span12">
+					<%= image_tag "paperandfeather.jpg", :class => "float-right testimonial" %>				
 					<p>
 						Normally, if I were writing about a restaurant I'd write about the food.  If I were writing about a shoe store I'd write about the shoes.  And if I were writing about a dentist I'd write about his / her dental skills.  With Dr. Rothenberg and his staff, great skills are a given.  
 					</p>
@@ -131,13 +134,13 @@
 						What I want to write about is that he's a Green Dentist.  I'm a 21 year old college student who spent a semester in Beijing, China.  I'd never been to China and was very excited about learning the language and meeting the people.  The semester was all and more than I expected for China is a land rich in history and culture not to mention our country's principal creditor. 
 					</p>
 					<p>
-						There is a remarkable interdependence between our countries.  More than 25% of SU students come from China and Asian countries and American colleges are peppering China with branches.  Our economies are entwined.  My ipad is made in China.  The coal fueling the ipad  factory is from the U.S. 
+						There is a remarkable interdependence between our countries.  More than 25% of SU students come from China and Asian countries and American colleges are peppering China with branches.  Our economies are entwined.  My iPad is made in China.  The coal fueling the iPad  factory is from the U.S. 
 					</p>
 					<p>
 						But we and the world are entwined in other ways.  The Chinese plant burning American coal and thousands of others across China have no scrubbers and spew immense pollution.  There were Beijing days when the pollution was so thick I could scarcely see across the street.
 					</p>
 					<p>
-						What world will I leave my children?  Will they breathe befouled air?  Will Sandy and Katrina be commonplace?    Will endless droughts wilt their crops?    Will icecaps, corals, and hundred of creatures disappear?
+						What world will I leave my children?  Will they breathe befouled air?  Will Sandy and Katrina be commonplace?    Will endless droughts wilt their crops?  Will icecaps, corals, and hundred of creatures disappear?
 					</p>
 					<p>
 						We all must play our part to prevent this and Dr. Rothenberg and the TLC Dental Group are leaders in Green Dentistry as you can see from their office with its emphasis on digital records, recycling, and its 6-R program.
