--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,13 +28,13 @@ our family of staff and patients.</div>
 			</div>
 			<div class="span6" style="margin-top: -15px;">
 				<b><i><h1><span itemprop="name">Rothenberg DDS</span>/<br>TLC Dental Group</h1>
-				<h2>The Art of Gentle Dentistry</h2></b></i>
+				<h2>We Cater to Cowards</h2></b></i>
 			</div>
 			<div class="span2">
 				<i><h4 style="line-height:25px; margin-top: -6px;">
 				7197 Highbridge
 				<br>Fayetteville, NY
-				<br>Directions<br><%= link_to "Email Us", contact_path %><br>
+				<br>Directions<br><%= link_to "Email Us", contact_path, :class => "red" %></span><br>
 				<span style="color:red;">315-637-7684</span>
 				</h4></i>
 			</div>			
