--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -60,7 +60,7 @@
 					<h3>Comforting Amenities</h3>
 				</div>
 				<div class="span7">
-					<%= image_tag 'comfortingamenities.jpg' %>
+					<%= image_tag 'comfortingamenities.jpg', :class => "amenityglasses" %>
 				</div>
 			</div>
 			<p style="margin-top:20px;">
