--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -40,7 +40,7 @@
 				Dr. Rothenberg believes that: "excellent dental care should not be reserved for the privileged few."  Accordingly, TLC Dental has long been recognized not only for the excellence of its dental care but also for the affordability of its care.<br>
 			</p>
 			<p>
-				We take pride in our "Dream Smiles" and equal pride in being a truly "affordable dentist."   In short, we will preserve your teeth and your wallet.<br>
+				We take pride in our "Dream Smiles" and equal pride in being a truly "affordable dentist."   In sum, we will preserve your teeth and your wallet.<br>
 			</p>						
 		</div>
 	</div>
