--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -50,6 +50,10 @@ label {
   }
 }
 
+.red {
+  color: red !important;
+}
+
 .container {
   -webkit-box-shadow:  1px 1px 15px 10px rgba(0, 0, 0, .1);      
   box-shadow:  1px 1px 15px 10px rgba(0, 0, 0, .1);
@@ -347,6 +351,12 @@ label {
 
 #amenities {
   margin-top: 40px;
+}
+
+.amenityglasses {
+  margin-left: 20px;
+  width: 155px;
+  height: auto;
 }
 
 .imagecolumn {
