--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -88,7 +88,7 @@
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
-					<h3>Marsha Rothenburg</h3>
+					<h3>Marsha Rothenberg</h3>
 				</div>
 			</div>
 			<div class="row-fluid">
