--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@ our family of staff and patients.</div>
             <li><%= link_to "Staff", staff_path %></li>
             <li class="dropdown">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">Office <b class="caret"></b></a>
-              <ul class="dropdown-submenu">
+              <ul class="dropdown-menu">
                 <li><%= link_to "Toothbrush Mailbox", office_toothbrushmailbox_path %></li>
                 <li><%= link_to "Amenities", office_amenities_path %></li>
 				<li><%= link_to "Advanced Technology", office_advancedtechnology_path %></li> 
@@ -68,8 +68,8 @@ our family of staff and patients.</div>
             <li><%= link_to "Gentle Dentistry", gentledentistry_path %></li>	
 		    <li class="dropdown">
 		      <a href="#" data-toggle="dropdown" class="dropdown-toggle">Treatments <b class="caret"></b></a>
-		      <ul class="dropdown-submenu" id="menu1">
-		        <li class="dropdown-menu">
+		      <ul class="dropdown-menu" id="menu1">
+		        <li class="dropdown-submenu">
 		          <a href="#">Dreamsmile Solutions</a>
 		          <ul class="dropdown-menu">
 		          	<li><%= link_to "Intro", dreamsmiles_path %></li>
